# advanced-nlp-course

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
aim/: Dockerfile
configs/: multilabel.json  multilabel_average.json  multilabel_average_head.json
multilabel/: config.py  dataset.py  export_onnx.py  inference.py  model.py  train.py
