[tool.poetry]
name = "multilabel"
version = "0.1.0"
description = ""
authors = ["danila <hexpisos@gmail.com>", "tani <tani.suksina@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12.9"
transformers = "^4.45.1"
torch = "^2.4.1"
tokenizers = "^0.20.0"
torchinfo = "^1.8.0"
aim = "<4.0.0"
datasets = "^3.1.0"
pytorch-metric-learning = "^2.7.0"
accelerate = "^1.1.1"
torchmetrics = "^1.6.0"
onnx = "^1.17.0"
onnxruntime = "^1.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
